--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu
 #sidebar links
 email: george.suveti@gmail.com
 phone: 0740 561 805
-website: blog.webjeda.com #do not add http://
+#website: blog.webjeda.com #do not add http://
 linkedin: gsuveti
 github: gsuveti
 twitter: '@gsuveti'
