--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,18 +1,27 @@
 - skill:
-  name: Python & Django
-  level: 98%
+  name: Java
+  level: 100%
 - skill:
-  name: Javascript & jQuery
-  level: 98%
+  name: Spring
+  level: 90%
 - skill:
-  name: Angular
-  level: 98%
+  name: Software design
+  level: 90%
+- skill:
+  name: Javascript
+  level: 100%
 - skill:
   name: HTML5 & CSS
-  level: 95%
+  level: 100%
 - skill:
-  name: Ruby on Rails
-  level: 85%
+  name: Angular
+  level: 100%
 - skill:
-  name: Sketch & Photoshop
+  name: React
+  level: 98%
+- skill:
+  name: Design thinking
+  level: 98%
+- skill:
+  name: Sketch, Illustrator & Photoshop
   level: 60%
