--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,10 @@ about: True # set to False or comment line if you want to remove the "How to use
 #style: styles-3
 #style: styles-4
 #style: styles-5
+#style: styles-6
 style: styles-6
+sass:
+    sass_dir: assets/scss
 
 
 #Profile information
