--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,9 +1,10 @@
 - interest:
-  item: Jogging
-  link:
+  item: Graphic design
 - interest:
-  item: Snowboarding
-  link:
+  item: Recreational maths
+- interest:
+  item: Skiing
+- interest:
+  item: Jogging
 - interest:
   item: Cooking
-  link:
