--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -1,9 +1,9 @@
 - language:
-  idiom: English
+  idiom: Romanian
   level: Native
 - language:
-  idiom: French
-  level: Professional
+  idiom: English
+  level: Advanced
 - language:
-  idiom: Spanish
-  level: Professional
+  idiom: German
+  level: Basic
