--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ about: True # set to False or comment line if you want to remove the "How to use
 #style: styles-3
 #style: styles-4
 #style: styles-5
-#style: styles-6
 style: styles-6
 sass:
     sass_dir: assets/scss
@@ -20,14 +19,11 @@ sass:
 name: George Suveti
 tagline: Full Stack Developer
 pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-summary: 'Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean
-commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.'
+summary: 'full stack dev | ux/ui enthusiast'
 
 #sidebar links
 email: george.suveti@gmail.com
-phone: 0740 561 805
+phone: 0040 740 561 805
 #website: blog.webjeda.com #do not add http://
 linkedin: gsuveti
 github: gsuveti
