--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,28 +1,34 @@
 - experience:
-  role: Lead Developer
-  time: 2015 - Present
-  company: Startup Hubs, San Francisco
-  details: "Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing
-  elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-  magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-  pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.
-  <br> <br>
-  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-  laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-  architecto beatae vitae dicta sunt explicabo."
+  role: Fullstack developer
+  time: 2018 - Present
+  company: Irian, Timisoara, RO
+  details: "Software architecture, UI design and development for multiple projects.<br>
+   Frontend: ui architecture, development of custom components,
+    app optimization, server side rendering, UI testing<br>
+   Backend: micro-services architecture, development of REST APIs, data modeling"
 - experience:
-  role: Senior Software Engineer
+  role: Trainer & mentor
+  time: 2018 - Present
+  company: Irian, Timisoara, RO
+  details: "Training material preparation and training delivery for Angular framework<br>
+  Mentor for the HackTM event (2016-2018) on the frontend subject"
+- experience:
+  role: Lead web developer
+  time: 2015 - 2017
+  company: Toprop GmbH, Vienna, AT
+  details: "React web application, wordpress blog & several backend micro-services for a real estate search platform"
+- experience:
+  role: Mobile & web developer
   time: 2014 - 2015
-  company: Google, London
-  details: "Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing
-  elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-  magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-  pellentesque eu, pretium quis, sem."
+  company: Irian, Timisoara, RO
+  details: "Mobile and web components for a custom Fuel-management system"
 - experience:
-  role: UI Developer
-  time: 2012 - 2014
-  company: Amazon, London
-  details: "Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing
-  elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-  magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-  pellentesque eu, pretium quis, sem."
+  role: UX Design Lab intern
+  time: 2013
+  company: Irian, Timisoara, RO
+  details: "Design introduction • Visual Design basics • Interaction Design basics • Design process"
+- experience:
+  role: Mobile Developer
+  time: 2013 - 2014
+  company: Guardus(now Zeiss Group), Timisoara
+  details: "Developing responsive android & angular mobile applications for various components in a Manufacturing Execution System"
