--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,5 +1,5 @@
 - education:
-  degree: Graduate Engineer of Computer Science
+  degree: Bachelor’s Degree in Computer Science
   university: Politehnica University of Timisoara
   time: 2011 - 2015
 #  details: "Describe your study here lorem ipsum dolor sit amet, consectetuer adipiscing
